--- a/index.html
+++ b/index.html
@@ -51,5 +51,7 @@
     HTML &#11088; &#11088; &#11088; &#11088; &#11088;
   </p>
   <P>CSS  &#11088; &#11088; &#11088; &#11088; &#11088; </P>
+  <hr>
+  <a href="contact.html">contact me</a>
 
 </html>
